--- a/index.html
+++ b/index.html
@@ -259,8 +259,17 @@
 </section> -->
 
 
+<div class="footer">
+    <div class="copyright">  2024 @<font id="copy-text" color="red" >ASTUTE </font>   - Powered by  <font id="copy-text" color="red" > Banglafire Solution Ltd </font>. All rights reserved.  </div>
+<div class="location-text">LOCATION <br>  <hr>  </div>
+<div class="map" >
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.528738722831!2d92.22234997475564!3d22.521857934829164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30ad4c086d55fa3b%3A0xf40280cc8e7352d7!2sBangladesh%20Noubahini%20School%20and%20College%20Kaptai!5e0!3m2!1sen!2sbd!4v1727933253374!5m2!1sen!2sbd" width="270" height="270" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-<br> <br> <br> <br>
+</div>
+
+<!-- <div class="copyright"></div> -->
+
+</footer>
 
 
 </body>
