--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>BN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
-    <link rel="icon" href="Favicon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
+    <link rel="icon" href="pic/Favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
@@ -18,7 +18,7 @@
 
 <!-- Navbar -->
 <div class="header">
-  <div > <img class="bn" src="bnsck.png" alt=""></div>
+  <div > <img class="bn" src="pic/bnsck.png" alt=""></div>
     <div class="animate__animated animate__jackInTheBox" id="login">LOGIN</div>
     <div class="youtube" ><a href="#"><i  class="fa-brands fa-youtube"></i></a></div>
 <div class="fb" ><a href="#">  <i class="fa-brands fa-facebook-f"></i></a></div>
@@ -121,7 +121,7 @@
     <!-- Marquee Section --> 
 <div class="up-wave">
     <div class="move">
-    <div class="news"><img class="news" src="Picsart_24-09-24_00-52-22-803.jpg"width="100" alt=""></div>
+    <div class="news"><img class="news" src="pic/Picsart_24-09-24_00-52-22-803.jpg"width="100" alt=""></div>
     <div class="card2">
         <marquee scrollamount="09" id="mark" behavior="" direction="left"><i id="dot" class="fa-solid fa-circle"></i>
           Welcome to Bangladesh Noubahini School and College, Kaptai Official Website. 
@@ -129,7 +129,7 @@
         <font color="black"  > একাদশ ও দ্বাদশ শ্রেণিতে ভর্তি কার্যক্রম চলছে |</font>
     </marquee>
     </div>
-    <div class="news2"><img class="news2" src="Picsart_24-09-24_01-08-31-140.jpg" alt="heeee" width="310"></div>    <!--Calender / Time / Date--> 
+    <div class="news2"><img class="news2" src="pic/Picsart_24-09-24_01-08-31-140.jpg" alt="heeee" width="310"></div>    <!--Calender / Time / Date--> 
     </div>
 </div>
 
@@ -139,10 +139,10 @@
 <!-- Autoo Picture Slide -->
 <div class="slider">
     <div class="slides">
-        <img src="1.png" alt="slide1"  >
-        <img src="2.png" alt="Slide 2">
-        <img src="3.png" alt="Slide 3">
-        <img src="4.png" alt="Slide 4">
+        <img src="pic/" alt="slide1"  >
+        <img src="pic/" alt="Slide 2">
+        <img src="pic/3.png" alt="Slide 3">
+        <img src="pic/4.png" alt="Slide 4">
        
     </div>
     </div>
@@ -161,7 +161,7 @@
 <div class="under-text">Welcome to Bangladesh Noubahini School & College Kaptai  </div>
 
 <!-- BNSCK Logo -->
-<div class="bn-logo"><img src="Favicon.png" width="350" alt=""></div>
+<div class="bn-logo"><img src="pic/Favicon.png" width="350" alt=""></div>
 
 <!-- More text -->
 <div class="about-text">
@@ -218,7 +218,7 @@
 
 
 <!-- Chairman -->
-        <div class="chairman-pic"><img src="chairman.jpg" width="130" height="146" alt=""></div>
+        <div class="chairman-pic"><img src="pic/chairman.jpg" width="130" height="146" alt=""></div>
         <div class="chairman">Chairman  <br> Message</div>
         <div class="h1-text">কমডোর , এম. নাজমুল হাসান <br> (ট্যাজ), ওএসপি, এনজিপি, <br> পিএসসি, বিএন</div>
         <div class="underline"></div>
@@ -231,7 +231,7 @@
 
 
 <!-- Principal Sir  -->
-        <div class="pri-pic"><img src="pri.jpg" width="125" height="145" alt=""></div>
+        <div class="pri-pic"><img src="pic/pri.jpg" width="125" height="145" alt=""></div>
         <div class="pri-sms">Principal <br> Message</div>
         <div class="u2"></div>
         <div class="h2-talks">কমান্ডার মাহবুব আহমদ <br> শাহজালাল, (শিক্ষা), বিএন</div>
@@ -249,16 +249,6 @@
 </div>
 
 
-<!-- Wavy Effect -->
-<!--  
-<section class="section"  >
-    <div class="wave wave1"></div>
-    <div class="wave wave2"></div>
-    <div class="wave wave3"></div>
-    <div class="wave wave4"></div>
-</section> -->
-
-
 <div class="footer">
     <div class="copyright">  2024 @<font id="copy-text" color="red" >ASTUTE </font>   - Powered by  <font id="copy-text" color="red" > Banglafire Solution Ltd </font>. All rights reserved.  </div>
 <div class="location-text">LOCATION <br>  <hr>  </div>
@@ -267,7 +257,6 @@
 
 </div>
 
-<!-- <div class="copyright"></div> -->
 
 </footer>
 
