--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 <!-- Autoo Picture Slide -->
 <div class="slider">
     <div class="slides">
-        <img src="pic/" alt="slide1"  >
-        <img src="pic/" alt="Slide 2">
+        <img src="pic/1.png" alt="slide1"  >
+        <img src="pic/2.png" alt="Slide 2">
         <img src="pic/3.png" alt="Slide 3">
         <img src="pic/4.png" alt="Slide 4">
        
